fixed js, changed mobile nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="nav__mobile">
             <a href="index.html" class="nav__mobile-logo">
-                <img src="./dist/img/logo.png" alt="" class="nav__mobile-img">
+                <img src="./dist/img/logogradient-desktop.png" alt="" class="nav__mobile-img">
             </a>
             <ul class="nav__mobile-list">
                 <li class="nav__mobile-item">
