--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
     <nav class="nav">
     <div class="container">
         <div class="nav__desktop">
+            <div class="nav__top">
+                <div class="container">
+                    <div class="nav__socials">
+                        <a href="https://www.facebook.com/EuropeanBoxingConfederation" class="nav__socials-link">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </a>
+                        <a href="https://www.youtube.com/user/EUBCOfficialChannel" class="nav__socials-link">
+                            <ion-icon name="logo-youtube"></ion-icon>
+                        </a>
+                        <a href="https://twitter.com/EUBCBOXING" class="nav__socials-link">
+                            <ion-icon name="logo-twitter"></ion-icon>
+                        </a>
+                        <a href="https://www.instagram.com/eubcboxing/" class="nav__socials-link">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+            </div>
             <a href="index.html" class="nav__desktop-logo">
                 <img src="./dist/img/logogradient-desktop.png" alt="eubcboxing logo, european boxing confederation"
                     class="nav__desktop-img">
@@ -114,7 +132,6 @@
                     <a href="#contact" class="nav__mobile-link">contact</a>
                 </li>
             </ul>
-
             <button class="nav__btn">
                 <div class="nav__btn-box">
                     <div class="nav__btn-bars"></div>
@@ -123,7 +140,8 @@
         </div>
     </div>
 </nav>
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="./dist/js/main.min.js"></script>
 </body>
 
