--- a/index.html
+++ b/index.html
@@ -41,10 +41,31 @@
             <ul class="nav__desktop-list">
                 <li class="nav__desktop-item">
                     <a href="#about" class="nav__desktop-link">about</a>
+                    <ul class="nav__desktop-dropdown">
+                        <li class="nav__desktop-dropdown-item">
+                            <a href="history.html" class="nav__desktop-dropdown-link">history</a>
+                        </li>
+                        <li class="nav__desktop-dropdown-item">
+                            <a href="committes.html" class="nav__desktop-dropdown-link">committes</a>
+                        </li>
+                        <li class="nav__desktop-dropdown-item">
+                            <a href="officials.html" class="nav__desktop-dropdown-link">officials</a>
+                        </li>
+                        <li class="nav__desktop-dropdown-item">
+                            <a href="anti-doping.html" class="nav__desktop-dropdown-link">anti-doping</a>
+                        </li>
+                    </ul>
                 </li>
-
                 <li class="nav__desktop-item">
                     <a href="#" class="nav__desktop-link">ranking</a>
+                    <ul class="nav__desktop-dropdown nav__desktop-dropdown--second">
+                        <li class="nav__desktop-dropdown-item">
+                            <a href="men.html" class="nav__desktop-dropdown-link">men</a>
+                        </li>
+                        <li class="nav__desktop-dropdown-item">
+                            <a href="women.html" class="nav__desktop-dropdown-link">women</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="nav__desktop-item">
                     <a href="calendar.html" class="nav__desktop-link">calendar</a>
@@ -131,6 +152,20 @@
                 <li class="nav__mobile-item">
                     <a href="#contact" class="nav__mobile-link">contact</a>
                 </li>
+                <div class="nav__mobile-socials">
+                    <a href="https://www.facebook.com/EuropeanBoxingConfederation" class="nav__mobile-social">
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </a>
+                    <a href="https://www.youtube.com/user/EUBCOfficialChannel" class="nav__mobile-social">
+                        <ion-icon name="logo-youtube"></ion-icon>
+                    </a>
+                    <a href="https://twitter.com/EUBCBOXING" class="nav__mobile-social">
+                        <ion-icon name="logo-twitter"></ion-icon>
+                    </a>
+                    <a href="https://www.instagram.com/eubcboxing/" class="nav__mobile-social">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+                </div>
             </ul>
             <button class="nav__btn">
                 <div class="nav__btn-box">
@@ -140,6 +175,16 @@
         </div>
     </div>
 </nav>
+    <header class="header">
+    <div class="container">
+
+        
+    </div>
+</header>
+    <main class="main">
+
+
+    </main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="./dist/js/main.min.js"></script>
