finished header, changed mobile nav

--- a/index.html
+++ b/index.html
@@ -176,13 +176,33 @@
     </div>
 </nav>
     <header class="header">
-    <div class="container">
-
-        
+    <div class="header__box">
+        <img src="./dist/img/header1-hq.jpg" alt="eubc header, header img, boxing, european boxing federation"
+            class="header__img header__img-active">
+        <img src="./dist/img/header2-hq.jpg" alt="eubc header, header img, boxing, european boxing federation"
+            class="header__img ">
+        <img src="./dist/img/header3-hq.jpg" alt="eubc header, header img, boxing, european boxing federation"
+            class="header__img ">
     </div>
+    <div class="header__content">
+        <h1 class="header__title">European Boxing Confederation</h1>
+        <p class="header__subtitle">The mission of EUBC is to govern the sport of boxing in all its forms in Europe
+            under the control and direction of AIBA.</p>
+        <a href="history.html" class="header__link">read more</a>
+
+    </div>
+    <ul class="header__controls">
+        <li class="header__btn" onclick="previousSlide()"></li>
+        <li class="header__btn" onclick="nextSlide()"></li>
+    </ul>
 </header>
     <main class="main">
+        <section id="about" class="about section-padding">
+            <div class="container">
 
+
+            </div>
+        </section>
 
     </main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
