fixed news img path in news section v2

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div class="news__boxes">
                     <div class="news__box">
                         <a href="#" class="news__card">
-                            <img src="../dist/img/news1-lq.jpg" alt="news card, news eubc" class="news__card-img">
+                            <img src="./dist/img/news1-lq.jpg" alt="news card, news eubc" class="news__card-img">
                             <div class="news__card-top">
                                 <p class="news__card-category">featured</p>
                             </div>
@@ -318,7 +318,7 @@
                             </div>
                         </a>
                         <a href="#" class="news__card">
-                            <img src="../dist/img/news1-lq.jpg" alt="news card, news eubc" class="news__card-img">
+                            <img src="./dist/img/news1-lq.jpg" alt="news card, news eubc" class="news__card-img">
                             <div class="news__card-top">
                                 <p class="news__card-category">featured</p>
                             </div>
@@ -328,7 +328,7 @@
                             </div>
                         </a>
                         <a href="#" class="news__card">
-                            <img src="../dist/img/news1-lq.jpg" alt="news card, news eubc" class="news__card-img">
+                            <img src="./dist/img/news1-lq.jpg" alt="news card, news eubc" class="news__card-img">
                             <div class="news__card-top">
                                 <p class="news__card-category">featured</p>
                             </div>
