finished committees subpage, structure sub page

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
             </a>
             <ul class="nav__desktop-list">
                 <li class="nav__desktop-item">
-                    <a href="#about" class="nav__desktop-link">about</a>
+                    <a href="index.html#about" class="nav__desktop-link">about</a>
                     <ul class="nav__desktop-dropdown">
                         <li class="nav__desktop-dropdown-item">
-                            <a href="committes.html" class="nav__desktop-dropdown-link">committes</a>
+                            <a href="structure.html#structure" class="nav__desktop-dropdown-link">structure</a>
+                        </li>
+                        <li class="nav__desktop-dropdown-item">
+                            <a href="commissions.html#commissions" class="nav__desktop-dropdown-link">committees</a>
                         </li>
                         <li class="nav__desktop-dropdown-item">
                             <a href="officials.html" class="nav__desktop-dropdown-link">officials</a>
@@ -70,7 +73,7 @@
                     </ul>
                 </li>
                 <li class="nav__desktop-item">
-                    <a href="#events" class="nav__desktop-link">calendar</a>
+                    <a href="index.html#events" class="nav__desktop-link">calendar</a>
                 </li>
                 <li class="nav__desktop-item">
                     <a href="video.html" class="nav__desktop-link">video</a>
@@ -79,7 +82,7 @@
                     <a href="documents.html" class="nav__desktop-link">documents</a>
                 </li>
                 <li class="nav__desktop-item">
-                    <a href="#contact" class="nav__desktop-link">contact</a>
+                    <a href="contact.html" class="nav__desktop-link">contact</a>
                 </li>
 
             </ul>
@@ -91,7 +94,7 @@
             </a>
             <ul class="nav__mobile-list">
                 <li class="nav__mobile-item">
-                    <a href="#about" class="nav__mobile-link">about</a>
+                    <a href="index.html#about" class="nav__mobile-link">about</a>
                     <button class="nav__mobile-btn nav__mobile-btn--first">
                         <svg xmlns="http://www.w3.org/2000/svg"
                             class="nav__mobile-svg icon icon-tabler icon-tabler-plus" width="28" height="28"
@@ -105,11 +108,12 @@
                 </li>
                 <ul class="nav__dropdown-list nav__dropdown-list--first ">
                     <li class="nav__mobile-item nav__dropdown-item">
-                        <a href="structure.html" class="nav__mobile-link nav__dropdown-link">structure</a>
+                        <a href="structure.html#structure" class="nav__mobile-link nav__dropdown-link">structure</a>
                     </li>
 
                     <li class="nav__mobile-item nav__dropdown-item">
-                        <a href="comissions.html" class="nav__mobile-link nav__dropdown-link">committes</a>
+                        <a href="commissions.html#commissions"
+                            class="nav__mobile-link nav__dropdown-link">committees</a>
                     </li>
                     <li class="nav__mobile-item nav__dropdown-item">
                         <a href="officials.html" class="nav__mobile-link nav__dropdown-link">officials</a>
@@ -140,7 +144,7 @@
                     </li>
                 </ul>
                 <li class="nav__mobile-item">
-                    <a href="#events" class="nav__mobile-link">calendar</a>
+                    <a href="index.html#events" class="nav__mobile-link">calendar</a>
                 </li>
                 <li class="nav__mobile-item">
                     <a href="video.html" class="nav__mobile-link">video</a>
@@ -149,7 +153,7 @@
                     <a href="documents.html" class="nav__mobile-link">documents</a>
                 </li>
                 <li class="nav__mobile-item">
-                    <a href="#contact" class="nav__mobile-link">contact</a>
+                    <a href="contact.html" class="nav__mobile-link">contact</a>
                 </li>
                 <div class="nav__mobile-socials">
                     <a href="https://www.facebook.com/EuropeanBoxingConfederation" class="nav__mobile-social">
@@ -190,7 +194,7 @@
         <h1 class="header__title">European Boxing Confederation</h1>
         <p class="header__subtitle">The mission of EUBC is to govern the sport of boxing in all its forms in Europe
             under the control and direction of AIBA.</p>
-        <a href="history.html" class="header__link">read more</a>
+        <a href="#about" class="header__link">read more</a>
 
     </div>
     <ul class="header__controls">
@@ -493,66 +497,73 @@
                     <span class="section-underline"></span>
                 </div>
                 <div class="socials__boxes">
-                    <div class="socials__box socials__box-facebook">
+                    <div class="socials__box socials__box-facebook card--white">
                         <div class="socials__box-top">
                             <ion-icon name="logo-facebook" class="socials__box-icon socials__box-icon--facebook">
                             </ion-icon>
-                            <p class="socials__box-title">Facebook</p>
+                            <p class="socials__box-title card-title--lightblack">Facebook</p>
                         </div>
                         <div class="socials__box-middle">
-                            <p class="socials__box-description">Check out our Facebook channel to stay with us up to
+                            <p class="socials__box-description  card-description--lightblack">Check out our Facebook
+                                channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="https://www.facebook.com/EuropeanBoxingConfederation" class="socials__box-btn">read
+                        <a href="https://www.facebook.com/EuropeanBoxingConfederation"
+                            class="socials__box-btn card-btn--navy">read
                             more</a>
                     </div>
-                    <div class="socials__box socials__box-twitter">
+                    <div class="socials__box socials__box-twitter  card--white">
                         <div class="socials__box-top">
                             <ion-icon name="logo-twitter" class="socials__box-icon socials__box-icon--twitter">
                             </ion-icon>
-                            <p class="socials__box-title">Twitter</p>
+                            <p class="socials__box-title card-title--lightblack">Twitter</p>
                         </div>
                         <div class="socials__box-middle">
-                            <p class="socials__box-description">Check out our Twitter channel to stay with us up to
+                            <p class="socials__box-description card-description--lightblack">Check out our Twitter
+                                channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="https://twitter.com/EUBCBOXING" class="socials__box-btn">read more</a>
+                        <a href="https://twitter.com/EUBCBOXING" class="socials__box-btn card-btn--navy">read more</a>
                     </div>
-                    <div class="socials__box socials__box-instagram">
+                    <div class="socials__box socials__box-instagram card--white">
                         <div class="socials__box-top">
                             <ion-icon name="logo-instagram" class="socials__box-icon socials__box-icon--instagram">
                             </ion-icon>
-                            <p class="socials__box-title">Instagram</p>
+                            <p class="socials__box-title card-title--lightblack">Instagram</p>
                         </div>
                         <div class="socials__box-middle">
-                            <p class="socials__box-description">Check out our Instagram channel to stay with us up to
+                            <p class="socials__box-description card-description--lightblack">Check out our Instagram
+                                channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="https://www.instagram.com/eubcboxing/" class="socials__box-btn">read more</a>
+                        <a href="https://www.instagram.com/eubcboxing/" class="socials__box-btn card-btn--navy">read
+                            more</a>
                     </div>
-                    <div class="socials__box socials__box-tiktok">
+                    <div class="socials__box socials__box-tiktok card--white">
                         <div class="socials__box-top">
                             <ion-icon name="logo-tiktok" class="socials__box-icon socials__box-icon--tiktok">
                             </ion-icon>
-                            <p class="socials__box-title">TikTok</p>
+                            <p class="socials__box-title card-title--lightblack">TikTok</p>
                         </div>
                         <div class="socials__box-middle">
-                            <p class="socials__box-description">Check out our TikTok channel to stay with us up to
+                            <p class="socials__box-description card-description--lightblack">Check out our TikTok
+                                channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="#" class="socials__box-btn">read more</a>
+                        <a href="#" class="socials__box-btn card-btn--navy">read more</a>
                     </div>
-                    <div class="socials__box socials__box-youtube">
+                    <div class="socials__box socials__box-youtube card--white">
                         <div class="socials__box-top">
                             <ion-icon name="logo-youtube" class="socials__box-icon socials__box-icon--youtube">
                             </ion-icon>
-                            <p class="socials__box-title">YouTube</p>
+                            <p class="socials__box-title card-title--lightblack">YouTube</p>
                         </div>
                         <div class="socials__box-middle">
-                            <p class="socials__box-description">Check out our YouTube channel to stay with us up to
+                            <p class="socials__box-description card-description--lightblack">Check out our YouTube
+                                channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="#" class="socials__box-btn">read more</a>
+                        <a href="#" class="socials__box-btn card-btn--navy">read more</a>
                     </div>
                 </div>
             </div>
@@ -576,11 +587,10 @@
 
             <div class="footer__box footer__box--sitemap">
                 <div class="footer__menu">
-                    <a href="#about" class="footer__menu-link">About</a>
-                    <a href="" class="footer__menu-link">History</a>
-                    <a href="" class="footer__menu-link">Structure</a>
-                    <a href="" class="footer__menu-link">Committees</a>
-                    <a href="" class="footer__menu-link">Partners</a>
+                    <a href="index.html#about" class="footer__menu-link">About</a>
+                    <a href="structure.html#structure" class="footer__menu-link">Structure</a>
+                    <a href="commissions.html#commissions" class="footer__menu-link">Committees</a>
+                    <a href="partners.html" class="footer__menu-link">Partners</a>
                 </div>
             </div>
             <div class="footer__box footer__box--socials">
