--- a/structure.html
+++ b/structure.html
@@ -54,7 +54,7 @@
                             <a href="commissions.html#commissions" class="nav__desktop-dropdown-link">committees</a>
                         </li>
                         <li class="nav__desktop-dropdown-item">
-                            <a href="officials.html" class="nav__desktop-dropdown-link">officials</a>
+                            <a href="officials.html#officials" class="nav__desktop-dropdown-link">officials</a>
                         </li>
                         <li class="nav__desktop-dropdown-item">
                             <a href="anti-doping.html" class="nav__desktop-dropdown-link">anti-doping</a>
@@ -116,7 +116,7 @@
                             class="nav__mobile-link nav__dropdown-link">committees</a>
                     </li>
                     <li class="nav__mobile-item nav__dropdown-item">
-                        <a href="officials.html" class="nav__mobile-link nav__dropdown-link">officials</a>
+                        <a href="officials.html#officials" class="nav__mobile-link nav__dropdown-link">officials</a>
                     </li>
                     <li class="nav__mobile-item nav__dropdown-item">
                         <a href="antidoping.html" class="nav__mobile-link nav__dropdown-link">anti-doping</a>
