--- a/commissions.html
+++ b/commissions.html
@@ -57,7 +57,7 @@
                             <a href="officials.html#officials" class="nav__desktop-dropdown-link">officials</a>
                         </li>
                         <li class="nav__desktop-dropdown-item">
-                            <a href="anti-doping.html" class="nav__desktop-dropdown-link">anti-doping</a>
+                            <a href="anti-doping.html#anti-doping" class="nav__desktop-dropdown-link">anti-doping</a>
                         </li>
                     </ul>
                 </li>
@@ -65,10 +65,10 @@
                     <a href="#" class="nav__desktop-link">ranking</a>
                     <ul class="nav__desktop-dropdown nav__desktop-dropdown--second">
                         <li class="nav__desktop-dropdown-item">
-                            <a href="men.html" class="nav__desktop-dropdown-link">men</a>
+                            <a href="men-ranking.html#ranking" class="nav__desktop-dropdown-link">men</a>
                         </li>
                         <li class="nav__desktop-dropdown-item">
-                            <a href="women.html" class="nav__desktop-dropdown-link">women</a>
+                            <a href="women-ranking.html#ranking" class="nav__desktop-dropdown-link">women</a>
                         </li>
                     </ul>
                 </li>
@@ -119,7 +119,8 @@
                         <a href="officials.html#officials" class="nav__mobile-link nav__dropdown-link">officials</a>
                     </li>
                     <li class="nav__mobile-item nav__dropdown-item">
-                        <a href="antidoping.html" class="nav__mobile-link nav__dropdown-link">anti-doping</a>
+                        <a href="anti-doping.html#anti-doping"
+                            class="nav__mobile-link nav__dropdown-link">anti-doping</a>
                     </li>
                 </ul>
                 <li class="nav__mobile-item">
@@ -137,10 +138,10 @@
                 </li>
                 <ul class="nav__dropdown-list nav__dropdown-list--second ">
                     <li class="nav__mobile-item nav__dropdown-item">
-                        <a href="men-ranking.html" class="nav__mobile-link nav__dropdown-link">men</a>
+                        <a href="men-ranking.html#ranking" class="nav__mobile-link nav__dropdown-link">men</a>
                     </li>
                     <li class="nav__mobile-item nav__dropdown-item">
-                        <a href="women-ranking.html" class="nav__mobile-link nav__dropdown-link">women</a>
+                        <a href="women-ranking.html#ranking" class="nav__mobile-link nav__dropdown-link">women</a>
                     </li>
                 </ul>
                 <li class="nav__mobile-item">
@@ -212,7 +213,6 @@
                 </div>
                 <div class="commissions__boxes">
                     <div class="commissions__box commissions__box--table">
-
                         <table class="commissions__box-table">
                             <tbody class="commissions__box-tbody">
                                 <tr class="commissions__box-tr">
