--- a/women-ranking.html
+++ b/women-ranking.html
@@ -204,90 +204,14 @@
     </ul>
 </header>
     <main class="main">
-        <section id="structure" class="section-padding structure">
+        <section id="ranking" class="section-padding ranking navy-section">
             <div class="container">
                 <div class="section-titlebox">
-                    <h2 class="section-title section-title--first">structure</h2>
-                    <h3 class="section-subtitle section-subtitle--first">directors</h3>
-                    <span class="section-underline"></span>
+                    <h2 class="section-title section-title--first">ranking</h2>
+                    <h3 class="section-subtitle section-subtitle--first">women</h3>
                 </div>
-                <p class="structure__title">Board of Directors of European Boxing Confederation</p>
-                <div class="structure__boxes">
-                    <div class="structure__box structure__box--img">
-                        <p class="structure__box-text">EUBC President
-                            Dr. Ioannis Filippatos (Greece)</p>
-                        <img src="./dist/img/eubcpresident.jpg" alt="EUBC CEO, EUBC President, Dr. Ioannis Filippatos"
-                            class="structure__img">
-                    </div>
-                    <div class="structure__box structure__box--table">
-                        <table class="structure__box-table">
-                            <tbody class="structure__box-tbody">
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th structure__box-th--fr">Name</th>
-                                    <th class="structure__box-th structure__box-th--fr">Role</th>
-                                    <th class="structure__box-th structure__box-th--fr">Country</th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Sumaid Khalidov</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="RU"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Krasimir Ininski</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="BG"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Felipe Josè Martinez Martinez</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="ES"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Nenad Borovcanin</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="RS"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Vasile Citea</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="RO"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Ohanes Ovsepian</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="AM"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Alexander Klemenko</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="ME"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Andre Micallef</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="MC"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Zsuzsanna Toth</th>
-                                    <th class="structure__box-th">Director</th>
-                                    <th class="structure__box-th" data-flag="HU"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Irma Testa</th>
-                                    <th class="structure__box-th">Athletes Committee
-                                    </th>
-                                    <th class="structure__box-th" data-flag="IT"></th>
-                                </tr>
-                                <tr class="structure__box-tr">
-                                    <th class="structure__box-th">Dmytro Tonyshev</th>
-                                    <th class="structure__box-th">Athletes Committee
-                                    </th>
-                                    <th class="structure__box-th" data-flag="IT"></th>
-                                </tr>
-                            </tbody>
-                        </table>
-
-                    </div>
+                <div class="ranking__boxes">
+                    
                 </div>
             </div>
         </section>
